001_03-07-2026_k8s_pod-networkpoicy-namspace-yml/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  
spec:
  finalizers:
  - kubernetes


---

apiVersion: v1
kind: Namespace
metadata:
  name: prod
  
spec:
  finalizers:
  - kubernetes
