001_03-07-2026_k8s_pod-networkpoicy-namspace-yml/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
  namespace: dev
  labels:
    app: my-app-nginx
spec:
  containers:
  - name: nginx-cont1
    image: nginx:latest
  # - name: firefox
  # image: selenium/standalone-firefox:latest
  # ports:
  #   - containerPort: 4444


---

apiVersion: v1
kind: Pod
metadata:
  name: pod-firefox
  namespace: dev
  labels:
    app: my-firefox
spec:
  containers:
    - name: firefox
      image: jlesage/firefox:latest
      ports:
        - containerPort: 5800


---

apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
  namespace: prod
  labels:
    app: my-app-nginx
spec:
  containers:
  - name: nginx-cont1
    image: nginx:latest


---


apiVersion: v1
kind: Pod
metadata:
  name: pod-firefox
  namespace: prod
  labels:
    app: my-firefox
spec:
  containers:
    - name: firefox
      image: jlesage/firefox:latest
      ports:
        - containerPort: 5800
