001_03-07-2026_k8s_pod-networkpoicy-namspace-yml/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-firefox
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: my-app-nginx
  policyTypes:
  - Ingress
  # - Egress
  ingress: 
      - from:
          - podSelector:
              matchExpressions:
                - key: app
                  # operator: NotIn
                  operator: In
                  values:
                    - my-firefox
